# DoseTap

./: .cache_ggshield  .gitignore  .swiftlint.yml  AUDIT_LOG.md  AUDIT_REPORT.md  CHANGELOG.md  PRIVACY_POLICY.md  Package.swift  README.md  WORKFLOW.md  api_specification.md  build_output.txt  repo_map.md  ui_specification.md
.githooks/: pre-commit
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
agent/: AGENT_PROMPT_DOSING_AMOUNT.md  AGENT_PROMPT_SESSION_ID_MIGRATION.md  BUILD_STATUS_2026-01-20.md  UI_FIXES_NEEDED.md  agent_brief.md  tasks_backlog.md
archive/: CODEBASE_AUDIT_REPORT.md  CORE_DATA_MIGRATION_SUMMARY.md  DEVELOPMENT_GUIDE.md  ENHANCED_COMPONENTS_STATUS.md  IMPLEMENTATION_STATUS.md  LOCAL_DEVELOPMENT_COMPLETE.md  LOCAL_DEVELOPMENT_PLAN.md  SSOT_v2.md
docs/: ADVERSARIAL_AUDIT_REPORT_2025-12-26.md  APPLE_DEV_CLI_SETUP.md  AUDIT_LOG_2025-12-24_session4.md  AUDIT_PROMPT_V2.md  AUDIT_TODO.md  BRANCH_PROTECTION.md  CERTIFICATE_PINNING.md  CLOUDKIT_GO_LIVE_CHECKLIST.md  CODE_AUDIT_2025-12-24.md  CODE_REVIEW_2025-12-24_session2.md  CODE_REVIEW_2025-12-24_session3.md  PRD.md  (+52 more)
tools/sidecar-ledger/: README.md  TODO.md  pyproject.toml
tools/sidecar-ledger/docs/: PIPELINE_SSOT.md
tools/sidecar-ledger/ledger/: manifest_schema.sql
tools/sidecar-ledger/scripts/: folder_structure.sh
tools/sidecar-ledger/sidecar_ledger/: __init__.py  __main__.py  cli.py
tools/sidecar-ledger/sidecar_ledger/commands/: ingest.py  init.py
tools/sidecar-ledger/sidecar_ledger/core/: ledger.py  paths.py  util.py
tools/sidecar-ledger/tests/: test_init_and_ingest.py
(+576 files in other folders)
