[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "sidecar-ledger"
version = "0.1.0"
description = "XMP sidecars as metadata truth; SQLite ledger as process truth."
requires-python = ">=3.10"

[project.optional-dependencies]
dev = ["pytest>=7"]

[tool.pytest.ini_options]
testpaths = ["tests"]
